--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css"> 
+    <link rel="shortcut icon" href="images/icon.ico" type="image/x-icon">
     <title>login</title>
 </head>
 <body>
